--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Cost per hour:</strong>
-  <%= @professional.cost_per_hour %>
+  <%= number_to_currency @professional.cost_per_hour %>
 </p>
 
 <p>
