Added activeadmin functionality for category and products as well as assotiations

--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -24,6 +24,12 @@
   <strong>Skills:</strong>
   <%= @professional.skills %>
 </p>
+<% if @professional.category.present? %>
+<p>
+  <strong>Category:</strong>
+  <%= @professional.category.name %>
+</p>
+<% end %>
 
 <%= link_to 'Edit', edit_professional_path(@professional) %> |
 <%= link_to 'Back', professionals_path %>
