Associated Orders to corporations to provinces and added activeadmin functionality

--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -6,3 +6,4 @@
 <%= link_to 'Rentals', rentals_path %>
 <%= link_to 'Corporations', corporations_path %>
 <%= link_to 'Provinces', provinces_path %>
+<%= link_to 'Log in as Admin', admin_root_path %>
