--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -1,1 +1,3 @@
-
+<%= link_to "All Professionals", professionals_listing_path %>
+<%= link_to "Categories", category_listing_path %>
+<%= link_to "Log in as Admin", admin_root_path %>
