--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -1,13 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Fname:</strong>
-  <%= @professional.fname %>
-</p>
-
-<p>
-  <strong>Lname:</strong>
-  <%= @professional.lname %>
+  <strong>Name:</strong> <%= @professional.fname %> <%= @professional.lname %>
 </p>
 
 <p>
@@ -30,6 +24,3 @@
   <%= @professional.category.name %>
 </p>
 <% end %>
-
-<%= link_to 'Edit', edit_professional_path(@professional) %> |
-<%= link_to 'Back', professionals_path %>
