--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -1,29 +1,5 @@
 <h1>Listing professionals</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Fname</th>
-      <th>Lname</th>
-      <th>Cost per hour</th>
-      <th>Available</th>
-      <th>Skills</th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @professionals.each do |professional| %>
-      <tr>
-        <td><%= professional.fname %></td>
-        <td><%= professional.lname %></td>
-        <td><%= number_to_currency professional.cost_per_hour %></td>
-        <td><%= professional.available %></td>
-        <td><%= professional.skills %></td>
-        <td><%= link_to 'Show', professional %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render 'professional_list' %>
 
 <br>
