--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -2,6 +2,10 @@
 <%= link_to "Categories", category_listing_path %>
 <%= link_to "Log in as Admin", admin_root_path %>
 <%= form_tag search_results_path, method: 'get' do %>
+  <%= select_tag(:search_keywords, options_from_collection_for_select(Category.all, :id, :name)) %>
+  <%= submit_tag "Search" %>
+<% end %>
+<%= form_tag search_results_path, method: 'get' do %>
   <%= text_field_tag :search_keywords %>
   <%= submit_tag "Search" %>
 <% end %>
