--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<p><%= image_tag @professional.image.url %></p>
+
 <p>
   <strong>Name:</strong> <%= @professional.fname %> <%= @professional.lname %>
 </p>
