--- a/app/views/frontpage/search_results.html.erb
+++ b/app/views/frontpage/search_results.html.erb
@@ -5,6 +5,6 @@
 
 <% if @professionals.empty? %>
   <p>No results found</p>
+<% else %>
+  <%= render 'professionals/professional_list' %>
 <% end %>
-
-<%= render 'professionals/professional_list' %>
