Added conditional logic to corporation log-in display in case someone is logged in already

--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -1,11 +1,1 @@
-<%= link_to "All Professionals", professionals_listing_path %>
-<%= link_to "Categories", category_listing_path %>
-<%= link_to "Log in as Admin", admin_root_path %>
-<%= link_to "Corporate Log-In", corporate_log_in_path %>
-<%= session[:current_user_id] %>
-
-<%= form_tag search_results_path, method: 'get' do %>
-  <%= select_tag(:cat_id, options_from_collection_for_select(Category.all, :id, :name), include_blank: 'All') %>
-  <%= text_field_tag :search_keywords %>
-  <%= submit_tag "Search" %>
-<% end %>
+<%= render "header_links" %>
