--- a/app/views/frontpage/corporate_log_in.html.erb
+++ b/app/views/frontpage/corporate_log_in.html.erb
@@ -1,15 +1,19 @@
-<%= link_to "All Professionals", professionals_listing_path %>
-<%= link_to "Categories", category_listing_path %>
-<%= link_to "Log in as Admin", admin_root_path %>
-
 <% if flash[:login_notice] %>
   <p><%= flash[:login_notice] %></p>
 <% end %>
 
-<%= form_tag("/corporate_log_in", method: "get") do %>
-<%= label_tag(:username, "Username:") %>
-<%= text_field_tag(:username) %>
-<%= label_tag(:password, "Password:") %>
-<%= text_field_tag(:password) %>
-<%= submit_tag("Submit") %>
+<%= link_to "All Professionals", professionals_listing_path %>
+<%= link_to "Categories", category_listing_path %>
+<%= link_to "Log in as Admin", admin_root_path %>
+
+<% unless session[:current_user_id] %>
+    <%= form_tag("/corporate_log_in", method: "get") do %>
+    <%= label_tag(:username, "Username:") %>
+    <%= text_field_tag(:username) %>
+    <%= label_tag(:password, "Password:") %>
+    <%= text_field_tag(:password) %>
+    <%= submit_tag("Submit") %>
+  <% end %>
+<% else %>
+  <p>You are already logged in</p>
 <% end %>
