--- a/app/views/frontpage/_header_links.html.erb
+++ b/app/views/frontpage/_header_links.html.erb
@@ -1,3 +1,5 @@
+<header id="header_links">
+<%= link_to "Home Page", root_path %>
 <%= link_to "All Professionals", professionals_listing_path %>
 <%= link_to "Categories", category_listing_path %>
 <%= link_to "Log in as Admin", admin_root_path %>
@@ -11,3 +13,4 @@
   <%= text_field_tag :search_keywords %>
   <%= submit_tag "Search" %>
 <% end %>
+</header>
