--- a/app/views/frontpage/search_results.html.erb
+++ b/app/views/frontpage/search_results.html.erb
@@ -1,6 +1,4 @@
-<%= link_to "All Professionals", professionals_listing_path %>
-<%= link_to "Categories", category_listing_path %>
-<%= link_to "Log in as Admin", admin_root_path %>
+<%= render 'header_links' %>
 <h3>Search results</h3>
 
 <% if @professionals.empty? %>
