--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Listing professionals</h1>
+<%= render 'Frontpage/header_links' %>
+<h1>Listing all professionals</h1>
 
 <%= render 'professional_list' %>
 
