--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,6 @@
 <%= render 'Frontpage/header_links' %>
+<section>
+
 <h1>All Categories</h1>
 
 <table>
@@ -20,3 +22,4 @@
 </table>
 
 <br>
+</section>
