--- a/app/views/professionals/_professional_list.html.erb
+++ b/app/views/professionals/_professional_list.html.erb
@@ -1,8 +1,8 @@
+<section>
 <table>
   <thead>
     <tr>
-      <th>Fname</th>
-      <th>Lname</th>
+      <th>Name</th>
       <th>Cost per hour</th>
       <th>Available</th>
       <th>Skills</th>
@@ -14,8 +14,7 @@
   <tbody>
     <% @professionals.each do |professional| %>
       <tr>
-        <td><%= professional.fname %></td>
-        <td><%= professional.lname %></td>
+        <td><%= professional.fname %> <%= professional.lname %></td>
         <td><%= number_to_currency professional.cost_per_hour %></td>
         <td><%= professional.available %></td>
         <td><%= professional.skills %></td>
@@ -25,3 +24,4 @@
     <% end %>
   </tbody>
 </table>
+</section>
