--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -31,7 +31,7 @@
   </section>
   <% if session[:current_user_id] %>
     <% if session[:professional].nil? || !(session[:professional].include? @professional.id ) %>
-      <%= form_tag add_rental_path, id: "rental", method: 'get' do %>
+      <%= form_tag add_rental_path, id: "rental", method: 'post' do %>
         <%= label_tag :hours, 'Select number of hours per day' %><br>
         <%= select_tag(:hours, options_for_select([['6',6],['7',7],['8',8],['9',9],['10',10]], 8)) %><br>
         <%= label_tag :hours, 'Select number of days for rental' %><br>
