--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -70,27 +70,38 @@ div {
   }
 }
 
-#header_links {
+header {
+  height: 120px;
+  margin-top: -20px;
+  background-color: #000;
   width: 100%;
-  background-color: #62736C;
-  border-top: 2px solid $border-color;
-  border-bottom: 2px solid $border-color;
-  height: 26px;
-  padding-top: 4px;
-  color: #FFF;
-  a {
-    padding: 2px 5px;
+  #logo_area {
+    width: 90%;
+    background-color: inherit;
+    border: none;
+  }
+  #header_links {
+    width: 90%;
+    background-color: #62736C;
+    border-top: 2px solid $border-color;
+    border-bottom: 2px solid $border-color;
+    height: 18px;
+    padding-top: 4px;
     color: #FFF;
-  }
-  form {
-    display: inline;
-    float: right;
-    pading-right: 10px;
-  }
-  input {
-    font-size: .85em;
-    width: 80px;
-    padding: 1px 20px;
+    a {
+      padding: 2px 5px;
+      color: #FFF;
+    }
+    form {
+      display: inline;
+      float: right;
+      pading-right: 10px;
+    }
+    input {
+      font-size: .85em;
+      width: 80px;
+      padding: 1px 5px;
+    }
   }
 }
 
