--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -1,6 +1,6 @@
 <%= render "header_links" %>
-<section>
-  <section id="content">
+<section id="content_holder">
+  <main id="content">
     <%= @page_content.index.html_safe %>
-  </section>
+  </main>
 </section>
