--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -1,6 +1,5 @@
 <%= render 'Frontpage/header_links' %>
-<h1>Listing all professionals</h1>
-
-<%= render 'professional_list' %>
-
-<br>
+<section id="content_holder">
+  <h1>Listing all professionals</h1>
+  <%= render 'professional_list' %>
+</section>
