--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,4 +1,5 @@
 $border-color: #5C8379;
+$header-color: #62736C;
 
 body {
   background-color: #fff;
@@ -71,18 +72,28 @@ div {
 }
 
 header {
-  height: 120px;
-  margin-top: -20px;
+  height: 98px;
+  margin: -20px auto 0px auto;
   background-color: #000;
-  width: 100%;
+  width: 90%;
+  padding: 0px 12px;
   #logo_area {
-    width: 90%;
+    width: 98%;
     background-color: inherit;
     border: none;
+    b {
+      float: right;
+      margin: 0px 5px;
+      color: #FFF;
+      a {
+        color: #FFF;
+      }
+    }
   }
   #header_links {
-    width: 90%;
-    background-color: #62736C;
+    width: 100%;
+    margin-left: -12px;
+    background-color: $header-color;
     border-top: 2px solid $border-color;
     border-bottom: 2px solid $border-color;
     height: 18px;
@@ -110,10 +121,51 @@ section {
   width: 90%;
   border: 2px solid $border-color;
   padding: 10px;
-  background-color: #D7E8DF;
   #content {
     width: 60%;
-    background-color: white;
-    margin: 0px 30px;
+    background-color: #FFF;
+    margin: 0px 0px 30px 30px;
+    display: inline-block;
+    border-radius: 5px;
   }
+  #rental, #add_item_alert {
+    width: 30%;
+    border: 1px solid $border-color;
+    background-color: #fff;
+    margin-right: 15px;
+    padding: 10px 0px 10px 30px;
+    float: right;
+    color: #000;
+    select {
+      margin: 7px 0px;
+      width: 50px;
+    }
+  }
+  #back {
+    color: #FFF;
+    margin-left: 20px;
+  }
+}
+
+#content_holder {
+  border-radius: 0px 0px 10px 10px;
+  /* Older browsers */
+  background: -prefix-linear-gradient(top, black 85%, $header-color);
+
+  /* Newer browsers */
+  background: linear-gradient(to bottom, black 85%, $header-color);
+}
+
+table {
+  margin: 0px auto 30px auto;
+  padding: 5px;
+  width: 90%;
+  background-color: #FFF;
+  border: 2px solid $border-color;
+  border-radius: 7px;
+  box-shadow: -2px 2px 7px #777;
+}
+
+h1, h2, h3, h4, h5, h6, h7, h8 {
+  color: #FFF;
 }
