--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,14 +1,10 @@
-<p id="notice"><%= notice %></p>
 <%= render 'Frontpage/header_links' %>
-<p>
-  <strong>Name:</strong>
-  <%= @category.name %>
-</p>
+<section id="content_holder">
+  <h1><%= @category.name %></h1>
 
-<h1>Listing professionals</h1>
+  <%= render 'professionals/professional_list' %>
 
-<%= render 'professionals/professional_list' %>
+  <br>
 
-<br>
-
-<%= link_to 'Back', category_listing_path %>
+  <%= link_to 'Back', category_listing_path, id: "back" %>
+</section>
