--- a/app/views/frontpage/add_rental.html.erb
+++ b/app/views/frontpage/add_rental.html.erb
@@ -1,13 +1,9 @@
 <%= render 'header_links' %>
-<section>
+<section id="content_holder">
 <h3>Results</h3>
 
 <% if session[:professional] %>
-  <p>Rental data
-    Professional: <%= session[:professional].last %><br />
-    Hours: <%= session[:hours].last %><br />
-    Days: <%= session[:days].last %><br />
-    Days before starting: <%= session[:start_days].last %><br />
+  <p>Professionals in cart: <%= session[:professional].count %> 
   </p>
 <% else %>
   <p>No rentals yet</p>
