--- a/app/views/frontpage/_header_links.html.erb
+++ b/app/views/frontpage/_header_links.html.erb
@@ -2,16 +2,19 @@
   <section id="logo_area">
     <%= image_tag("itsprLogo.png") %>
     <b>
+      <%= link_to "About Us", about_path %> |
+      <%= link_to "Contact", contact_path %> |
       <%= link_to "Corporate Log-In", corporate_log_in_path %> |
       <%= link_to "Log in as Admin", admin_root_path %>
     </b>
   </section>
-  <section id="header_links">
+  <nav id="header_links">
     <%= link_to "Home Page", root_path %>
     <%= link_to "All Professionals", professionals_listing_path %>
     <%= link_to "Categories", category_listing_path %>
+    <%= link_to "Cart", cart_path %>
     <% if session[:current_user_id] %>
-      <i>Logged in as: <%= session[:current_user_id] %></i>
+      <i>Logged in as: <%= session[:current_user_name] %></i>
     <% end %>
 
     <%= form_tag search_results_path, id: "search", method: 'get' do %>
@@ -19,5 +22,5 @@
       <%= text_field_tag :search_keywords %>
       <%= submit_tag "Search" %>
     <% end %>
-  </section>
+  </nav>
 </header>
