--- a/app/views/frontpage/about.html.erb
+++ b/app/views/frontpage/about.html.erb
@@ -1,7 +1,6 @@
 <%= render "header_links" %>
 <section id="content_holder">
   <main id="content">
-    <%= @page_content.index.html_safe %>
+    <%= @page_content.about.html_safe %>
   </main>
-  <%= image_tag("frontpage.jpg") %>
 </section>
