--- a/app/views/frontpage/search_results.html.erb
+++ b/app/views/frontpage/search_results.html.erb
@@ -1,8 +1,15 @@
 <%= render 'header_links' %>
 <section id="content_holder">
   <h3>Search results</h3>
-
-  <% if @professionals.empty? %>
+  <%= form_tag search_results_path, id: "available", method: 'get' do %>
+    <%= hidden_field_tag :search_keywords, params[:search_keywords] %>
+    <%= submit_tag "Available" %>
+  <% end %>
+  <%= form_tag search_results_path, id: "sort", method: 'get' do %>
+    <%= hidden_field_tag :search_keywords, params[:search_keywords] %>
+    <%= submit_tag "Recently Updated" %>
+  <% end %>
+  <% if @professionals.nil? %>
     <p>No results found</p>
   <% else %>
     <%= render 'professionals/professional_list' %>
