--- a/app/views/frontpage/search_results.html.erb
+++ b/app/views/frontpage/search_results.html.erb
@@ -7,6 +7,7 @@
   <% end %>
   <%= form_tag search_results_path, id: "sort", method: 'get' do %>
     <%= hidden_field_tag :search_keywords, params[:search_keywords] %>
+    <%= hidden_field_tag :cat_id, params[:cat_id] %>
     <%= submit_tag "Recently Updated" %>
   <% end %>
   <% if @professionals.nil? %>
