Improved design with SCSS for images

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -160,6 +160,12 @@ section {
 
   /* Newer browsers */
   background: linear-gradient(to bottom, black 85%, $header-color);
+  img {
+    margin-left: 80px;
+    border: 2px solid #000;
+    border-radius: 5px;
+    box-shadow: 0px 0px 7px #000;
+  }
 }
 
 table {
