--- a/app/views/frontpage/cart.html.erb
+++ b/app/views/frontpage/cart.html.erb
@@ -15,6 +15,7 @@
         </tr>
       </thead>
       <tbody>
+        <% grand_total = 0 %>
         <% @professionals.each do |professional| %>
           <% 
             related_index = session[:professional].index(professional.id).to_i
@@ -23,19 +24,33 @@
             taxes = (subtotal * (@corporation.province.pst.round(5) + @corporation.province.gst.round(5) + @corporation.province.hst.round(5))).round(2)
             total = subtotal + taxes
             start_date = session[:start_days][related_index].to_i.days.from_now.to_date
+            end_date = start_date + session[:days][related_index].to_i
+            grand_total += total
           %>
           <tr>
             <td><%= professional.fname %> <%= professional.lname %></td>
             <td><%= start_date %></td>
-            <td></td>
-            <td><%= number_to_currency(subtotal) %></td>
-            <td><%= number_to_currency(taxes) %></td>
-            <td><%= number_to_currency(total) %></td>
+            <td><%= end_date %></td>
+            <td><%= number_to_currency subtotal %></td>
+            <td><%= number_to_currency taxes %></td>
+            <td><%= number_to_currency total %></td>
             <td><%= link_to 'Show', professional %></td>
           </tr>
         <% end %>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>Grand total: <%= number_to_currency grand_total %></td>
+          <td></td>
+        </tr>
       </tbody>
     </table>
+    <%= form_tag make_order_path, id: "order", method: 'post' do %>
+      <%= submit_tag "Make Order" %>
+    <% end %>
   <% else %>
     <table>
       <tr><td>No rentals yet</td></tr>
