Added dashboard listing of unpaid orders by customer for active admin

--- a/app/views/frontpage/_header_links.html.erb
+++ b/app/views/frontpage/_header_links.html.erb
@@ -18,8 +18,8 @@
     <% end %>
 
     <%= form_tag search_results_path, id: "search", method: 'get' do %>
-      <%= select_tag(:cat_id, options_from_collection_for_select(Category.all, :id, :name), prompt: "All") %>
-      <%= text_field_tag :search_keywords %>
+      <%= select_tag(:cat_id_head, options_from_collection_for_select(Category.all, :id, :name), prompt: "All") %>
+      <%= text_field_tag :search_keywords_head %>
       <%= submit_tag "Search" %>
     <% end %>
   </nav>
