--- a/app/views/frontpage/search_results.html.erb
+++ b/app/views/frontpage/search_results.html.erb
@@ -2,12 +2,12 @@
 <section id="content_holder">
   <h3>Search results</h3>
   <%= form_tag search_results_path, id: "available", method: 'get' do %>
-    <%= hidden_field_tag :search_keywords, params[:search_keywords] %>
+    <%= hidden_field_tag :search_keywords, params[:search_keywords_head] %>
     <%= submit_tag "Available" %>
   <% end %>
   <%= form_tag search_results_path, id: "sort", method: 'get' do %>
-    <%= hidden_field_tag :search_keyword, params[:search_keywords] %>
-    <%= hidden_field_tag :cat_id, params[:cat_id] %>
+    <%= hidden_field_tag :search_keyword, params[:search_keywords_head] %>
+    <%= hidden_field_tag :cat_id, params[:cat_id_head] %>
     <%= submit_tag "Recently Updated" %>
   <% end %>
   <% if @professionals.nil? %>
